--- a/cn/api-reference/endpoint/video-generation.mdx
+++ b/cn/api-reference/endpoint/video-generation.mdx
@@ -5,7 +5,7 @@ api: 'POST https://llm.ai-nebula.com/v1/video/generations'
 
 ## 简介
 
-视频生成接口支持文生视频、图生视频等多种功能。通过统一的API接口，您可以调用Sora 2、Veo、阿里万相等多个主流视频生成模型。
+视频生成接口支持文生视频、图生视频等多种功能。通过统一的API接口，您可以调用Sora 2、Veo、阿里万相、豆包 Seedance 等多个主流视频生成模型。
 
 **重要提示**：视频生成是异步任务，需要先提交任务获取任务ID，然后轮询查询任务状态直到成功。
 
@@ -22,6 +22,7 @@ api: 'POST https://llm.ai-nebula.com/v1/video/generations'
   - Sora 2 系列：`sora-2`
   - Veo 系列：`veo-3.1-generate-preview`、`veo-3.1-fast-generate-preview`、`veo-3.0-generate-preview`、`veo-3.0-fast-generate-001`
   - 阿里万相系列：`wan2.5-i2v-preview`
+  - 豆包 Seedance 系列：`doubao-seedance-1-0-pro-250528`、`doubao-seedance-1-0-lite-t2v-250428`、`doubao-seedance-1-0-lite-i2v-250428`、`doubao-seaweed-1-0-t2v-250428`、`wan2-1-14b-i2v-250417`、`wan2-1-14b-flf2v-250417`
 </ParamField>
 
 <ParamField body="prompt" type="string" required>
@@ -41,8 +42,111 @@ api: 'POST https://llm.ai-nebula.com/v1/video/generations'
 </ParamField>
 
 <ParamField body="aspect_ratio" type="string" default="16:9">
-  宽高比：`16:9`、`9:16`、`1:1`、`4:3`
+  宽高比：`16:9`、`9:16`、`1:1`、`4:3`、`3:4`、`21:9`、`adaptive`（自适应，仅部分模型支持）
 </ParamField>
+
+## 模型专用参数
+
+不同模型支持不同的专用参数，以下按模型系列分类说明：
+
+<Tabs>
+  <Tab title="Sora 2">
+<ParamField body="seconds" type="string|integer" default="4">
+  视频时长（秒），支持：`4`、`8`、`12`
+</ParamField>
+<ParamField body="size" type="string" default="720x1280">
+  视频分辨率，支持：`720x1280`（竖屏）、`1280x720`（横屏）
+</ParamField>
+<ParamField body="input_reference" type="string">
+  参考图片（支持 URL 或 Base64 格式），用于图生视频
+</ParamField>
+<ParamField body="remix_from_video_id" type="string">
+  Remix 模式：基于已有视频ID重新生成（必须以 `video_` 开头）
+</ParamField>
+  </Tab>
+  
+  <Tab title="Veo">
+<ParamField body="durationSeconds" type="integer" default="4">
+  视频时长（秒），支持：`4`、`6`、`8`
+</ParamField>
+<ParamField body="aspectRatio" type="string" default="16:9">
+  宽高比，仅支持：`16:9`、`9:16`
+</ParamField>
+<ParamField body="resolution" type="string" default="1080p">
+  分辨率，支持：`720p`、`1080p`
+</ParamField>
+<ParamField body="fps" type="integer" default="24">
+  帧率，默认 24
+</ParamField>
+<ParamField body="image" type="string">
+  首帧参考图（支持 URL 或 Base64 格式）
+</ParamField>
+<ParamField body="lastFrame" type="string">
+  尾帧参考图（支持 URL 或 Base64 格式），仅 `veo-3.1` 系列支持
+</ParamField>
+<ParamField body="generateAudio" type="boolean" default="false">
+  是否生成同步音频。快速版模型会忽略该参数并始终包含音频
+</ParamField>
+<ParamField body="personGeneration" type="string" default="allow_all">
+  人像生成策略：`allow_all`（所有年龄）、`allow_adult`（成年人）、`dont_allow`（禁止人像）
+</ParamField>
+<ParamField body="addWatermark" type="boolean" default="false">
+  是否添加水印
+</ParamField>
+<ParamField body="seed" type="integer">
+  随机种子，用于复现结果
+</ParamField>
+<ParamField body="sampleCount" type="integer" default="1">
+  每次生成的视频数量，范围：`1-4`
+</ParamField>
+  </Tab>
+  
+  <Tab title="阿里万相">
+<ParamField body="duration" type="integer" default="5">
+  视频时长（秒），支持：`5`、`10`
+</ParamField>
+<ParamField body="resolution" type="string" default="720p">
+  视频分辨率，支持：`480p`、`720p`、`1080p`
+</ParamField>
+<ParamField body="size" type="string">
+  视频尺寸（仅 t2v 模式），格式：`宽度*高度`，如 `1280*720`
+</ParamField>
+<ParamField body="smart_rewrite" type="boolean" default="false">
+  是否启用智能提示词扩写
+</ParamField>
+<ParamField body="generate_audio" type="boolean" default="false">
+  是否生成与画面同步的音频
+</ParamField>
+<ParamField body="audio_url" type="string">
+  自定义音频文件URL（HTTPS格式）
+</ParamField>
+<ParamField body="seed" type="integer">
+  随机种子，范围：`0-2147483647`
+</ParamField>
+  </Tab>
+  
+  <Tab title="豆包 Seedance">
+<ParamField body="metadata" type="object">
+  豆包模型使用 `metadata.content` 数组传递内容，支持文本和图片混合输入。参数通过文本提示词中的特殊标记控制：
+  - `--rs` 或 `--resolution`：分辨率（`480p`、`720p`、`1080p`）
+  - `--ratio`：宽高比（`16:9`、`9:16`、`1:1`、`4:3`、`3:4`、`adaptive`）
+  - `--dur` 或 `--duration`：时长（秒，如 `5`、`10`）
+  - `--fps` 或 `--framespersecond`：帧率（如 `24`、`30`）
+  - `--seed`：随机种子
+  - `--wm` 或 `--watermark`：水印开关（`true`、`false`）
+  - `--cf` 或 `--camerafixed`：固定摄像头（`true`、`false`，仅 lite 模型支持）
+</ParamField>
+<ParamField body="image" type="string">
+  参考图片（支持 URL 或 Base64 格式）。在 `metadata.content` 中，图片可通过 `role` 字段标记：
+  - `first_frame`：首帧图片
+  - `last_frame`：尾帧图片（仅部分模型支持）
+  - `reference_image`：参考图（仅 `doubao-seedance-1-0-lite-i2v-250428` 支持）
+</ParamField>
+<ParamField body="callback_url" type="string">
+  回调通知URL（可选），任务状态变更时自动推送结果
+</ParamField>
+  </Tab>
+</Tabs>
 
 ## 完整示例
 
@@ -87,22 +191,86 @@ api: 'POST https://llm.ai-nebula.com/v1/video/generations'
     | `succeeded` | 任务成功完成 | 下载视频 |
     | `failed` | 任务失败 | 查看失败原因 |
     
+    **响应示例（排队中）**：
+    ```json
+    {
+      "task_id": "video_69095b4ce0048190893a01510c0c98b0",
+      "status": "queued",
+      "format": "mp4"
+    }
+    ```
+    
+    **响应示例（处理中）**：
+    ```json
+    {
+      "task_id": "video_69095b4ce0048190893a01510c0c98b0",
+      "status": "in_progress",
+      "format": "mp4"
+    }
+    ```
+    
     **响应示例（已完成）**：
     ```json
     {
       "task_id": "video_69095b4ce0048190893a01510c0c98b0",
       "status": "succeeded",
-      "format": "mp4",
-      "url": "https://dashscope-result-sh.oss-cn-shanghai.aliyuncs.com/.../video.mp4?Expires=..."
+      "format": "mp4"
     }
     ```
     
+    **响应示例（失败）**：
+    ```json
+    {
+      "task_id": "video_69095b4ce0048190893a01510c0c98b0",
+      "status": "failed",
+      "format": "mp4",
+      "error": {
+        "code": 400,
+        "message": "提示词包含不当内容"
+      }
+    }
+    ```
+    
+    **重要提示**：
+    - 任务状态为 `queued` 或 `in_progress` 时，需要定期轮询（建议每 3-5 秒查询一次）
+    - 当状态变为 `succeeded` 时，可以使用 `task_id` 作为 `videoId` 去下载视频
+    - 当状态变为 `failed` 时，可以查看 `error` 字段了解失败原因
+    
     ### 3. 下载视频（Sora 2 特有）
     
+    使用轮询成功后返回的 `task_id`（作为 `videoId`）下载视频：
+    
     ```bash
-    curl -X GET "https://dashscope-result-sh.oss-cn-shanghai.aliyuncs.com/.../video.mp4?Expires=..." \
-      -o "generated_video.mp4"
+    curl -X GET "https://llm.ai-nebula.com/v1/video/generations/download?id=video_69095b4ce0048190893a01510c0c98b0" \
+      -H "Authorization: Bearer sk-xxxxxxxxxx"
     ```
+    
+    **注意**：`id` 参数的值就是步骤 2 中轮询成功后返回的 `task_id`。
+    
+    **响应示例**：
+    ```json
+    {
+      "success": true,
+      "generation_id": "video_69095b4ce0048190893a01510c0c98b0",
+      "task_id": "video_69095b4ce0048190893a01510c0c98b0",
+      "format": "mp4",
+      "size": 15728640,
+      "base64": "AAAAIGZ0eXBpc29tAAACAGlzb21pc28yYXZjMW1wNDEAAAAIZnJlZQAAB...",
+      "data_url": "data:video/mp4;base64,AAAAIGZ0eXBpc29tAAACAGlzb21pc28yYXZjMW1wNDEAAAAIZnJlZQAAB..."
+    }
+    ```
+    
+    **响应字段说明**：
+    
+    | 字段名 | 类型 | 说明 |
+    |--------|------|------|
+    | `success` | boolean | 是否成功 |
+    | `generation_id` | string | 生成ID（与 videoId 相同） |
+    | `task_id` | string | 任务ID |
+    | `format` | string | 视频格式（固定为 `"mp4"`） |
+    | `size` | number | 视频文件大小（字节） |
+    | `base64` | string | Base64 编码的视频数据 |
+    | `data_url` | string | Data URL 格式的视频数据，可直接用于前端 `<video>` 标签 |
   </Tab>
   
   <Tab title="Veo 完整示例">
@@ -197,6 +365,155 @@ api: 'POST https://llm.ai-nebula.com/v1/video/generations'
     }
     ```
   </Tab>
+  
+  <Tab title="豆包 Seedance 完整示例">
+    ### 1. 文生视频（T2V）
+    
+    ```bash
+    curl -X POST "https://llm.ai-nebula.com/v1/video/generations" \
+      -H "Authorization: Bearer sk-xxxxxxxxxx" \
+      -H "Content-Type: application/json" \
+      -d '{
+        "model": "doubao-seedance-1-0-pro-250528",
+        "prompt": "多个镜头。一名侦探进入一间光线昏暗的房间。他检查桌上的线索，手里拿起桌上的某个物品。镜头转向他正在思索。 --ratio 16:9 --dur 5",
+        "metadata": {
+          "content": [
+            {
+              "type": "text",
+              "text": "多个镜头。一名侦探进入一间光线昏暗的房间。他检查桌上的线索，手里拿起桌上的某个物品。镜头转向他正在思索。 --ratio 16:9 --dur 5"
+            }
+          ]
+        }
+      }'
+    ```
+    
+    ### 2. 图生视频-首帧模式（I2V）
+    
+    ```bash
+    curl -X POST "https://llm.ai-nebula.com/v1/video/generations" \
+      -H "Authorization: Bearer sk-xxxxxxxxxx" \
+      -H "Content-Type: application/json" \
+      -d '{
+        "model": "doubao-seedance-1-0-pro-250528",
+        "prompt": "女孩抱着狐狸，女孩睁开眼，温柔地看向镜头，狐狸友善地抱着，镜头缓缓拉出，女孩的头发被风吹动 --ratio adaptive --dur 5",
+        "metadata": {
+          "content": [
+            {
+              "type": "text",
+              "text": "女孩抱着狐狸，女孩睁开眼，温柔地看向镜头，狐狸友善地抱着，镜头缓缓拉出，女孩的头发被风吹动 --ratio adaptive --dur 5"
+            },
+            {
+              "type": "image_url",
+              "image_url": {
+                "url": "https://example.com/first-frame.png"
+              }
+            }
+          ]
+        }
+      }'
+    ```
+    
+    ### 3. 图生视频-首尾帧模式（仅 lite-i2v 支持）
+    
+    ```bash
+    curl -X POST "https://llm.ai-nebula.com/v1/video/generations" \
+      -H "Authorization: Bearer sk-xxxxxxxxxx" \
+      -H "Content-Type: application/json" \
+      -d '{
+        "model": "doubao-seedance-1-0-lite-i2v-250428",
+        "prompt": "一只蓝绿精卫鸟变成人形 --rs 720p --dur 5 --cf false",
+        "metadata": {
+          "content": [
+            {
+              "type": "text",
+              "text": "一只蓝绿精卫鸟变成人形 --rs 720p --dur 5 --cf false"
+            },
+            {
+              "type": "image_url",
+              "image_url": {
+                "url": "https://example.com/first-frame.png"
+              },
+              "role": "first_frame"
+            },
+            {
+              "type": "image_url",
+              "image_url": {
+                "url": "https://example.com/last-frame.png"
+              },
+              "role": "last_frame"
+            }
+          ]
+        }
+      }'
+    ```
+    
+    ### 4. 图生视频-参考图模式（仅 lite-i2v 支持）
+    
+    ```bash
+    curl -X POST "https://llm.ai-nebula.com/v1/video/generations" \
+      -H "Authorization: Bearer sk-xxxxxxxxxx" \
+      -H "Content-Type: application/json" \
+      -d '{
+        "model": "doubao-seedance-1-0-lite-i2v-250428",
+        "prompt": "[图1]戴着眼镜穿着蓝色T恤的男生和[图2]的柯基小狗，坐在[图3]的草坪上，3D卡通风格",
+        "metadata": {
+          "content": [
+            {
+              "type": "text",
+              "text": "[图1]戴着眼镜穿着蓝色T恤的男生和[图2]的柯基小狗，坐在[图3]的草坪上，3D卡通风格"
+            },
+            {
+              "type": "image_url",
+              "image_url": {
+                "url": "https://example.com/ref1.png"
+              },
+              "role": "reference_image"
+            },
+            {
+              "type": "image_url",
+              "image_url": {
+                "url": "https://example.com/ref2.png"
+              },
+              "role": "reference_image"
+            },
+            {
+              "type": "image_url",
+              "image_url": {
+                "url": "https://example.com/ref3.png"
+              },
+              "role": "reference_image"
+            }
+          ]
+        }
+      }'
+    ```
+    
+    **响应示例**：
+    ```json
+    {
+      "task_id": "cgt-2025123456-abcd",
+      "status": "submitted",
+      "format": "mp4"
+    }
+    ```
+    
+    ### 5. 轮询查询任务状态
+    
+    ```bash
+    curl -X GET "https://llm.ai-nebula.com/v1/video/generations/cgt-2025123456-abcd" \
+      -H "Authorization: Bearer sk-xxxxxxxxxx"
+    ```
+    
+    **响应示例（已完成）**：
+    ```json
+    {
+      "task_id": "cgt-2025123456-abcd",
+      "status": "succeeded",
+      "format": "mp4",
+      "url": "https://ark-content-generation-cn-beijing.tos-cn-beijing.volces.com/.../video.mp4?X-Tos-Algorithm=..."
+    }
+    ```
+  </Tab>
 </Tabs>
 
 ## 支持的模型
@@ -211,10 +528,17 @@ api: 'POST https://llm.ai-nebula.com/v1/video/generations'
 - ✅ Remix 模式（基于已有视频重新生成）
 
 **支持参数**:
-- `seconds`: 视频时长（4、8、12秒）
-- `size`: 视频分辨率（720x1280、1280x720）
-- `input_reference`: 参考图片（URL 或 Base64）
-- `remix_from_video_id`: 基于已有视频ID重新生成
+- `seconds`: 视频时长（4、8、12秒），默认 4 秒
+- `size`: 视频分辨率（`720x1280` 竖屏、`1280x720` 横屏），默认 `720x1280`
+- `width` / `height`: 视频宽度和高度（会自动转换为 `size` 参数）
+- `input_reference`: 参考图片（支持 URL 或 Base64 格式），用于图生视频
+- `remix_from_video_id`: Remix 模式，基于已有视频ID重新生成（必须以 `video_` 开头）
+
+**注意事项**:
+- 视频生成是异步任务，需要先提交任务获取 `task_id`，然后轮询查询任务状态
+- 当任务状态为 `succeeded` 时，使用 `task_id` 作为 `videoId` 调用下载接口获取视频
+- 下载接口返回 Base64 编码的视频数据，可直接用于前端播放或保存为文件
+- 图片输入格式支持 JPEG、PNG，图生视频时图片尺寸必须与 `size` 参数完全匹配
 
 ### Veo 系列
 
@@ -253,6 +577,42 @@ api: 'POST https://llm.ai-nebula.com/v1/video/generations'
 - `generate_audio`: 是否生成与画面同步的音频
 - `audio_url`: 自定义音频文件URL
 - `seed`: 随机种子
+
+### 豆包 Seedance 系列
+
+**模型名称**:
+- `doubao-seedance-1-0-pro-250528` - 专业版，支持文生视频和图生视频（首帧模式）
+- `doubao-seedance-1-0-lite-t2v-250428` - 轻量版文生视频
+- `doubao-seedance-1-0-lite-i2v-250428` - 轻量版图生视频，支持首帧、首尾帧、参考图三种模式
+- `doubao-seaweed-1-0-t2v-250428` - 海草版文生视频
+- `wan2-1-14b-i2v-250417` - 万象版图生视频
+- `wan2-1-14b-flf2v-250417` - 万象版首尾帧生成
+
+**核心能力**:
+- ✅ 文生视频（T2V）
+- ✅ 图生视频-首帧模式（I2V）
+- ✅ 图生视频-首尾帧模式（仅 `doubao-seedance-1-0-lite-i2v-250428` 和 `wan2-1-14b-flf2v-250417` 支持）
+- ✅ 图生视频-参考图模式（仅 `doubao-seedance-1-0-lite-i2v-250428` 支持）
+
+**支持参数**（通过文本提示词中的标记控制）:
+- `--rs` / `--resolution`: 分辨率（`480p`、`720p`、`1080p`）
+- `--ratio`: 宽高比（`16:9`、`9:16`、`1:1`、`4:3`、`3:4`、`adaptive`）
+- `--dur` / `--duration`: 时长（秒，如 `5`、`10`）
+- `--fps` / `--framespersecond`: 帧率（如 `24`、`30`）
+- `--seed`: 随机种子
+- `--wm` / `--watermark`: 水印开关（`true`、`false`）
+- `--cf` / `--camerafixed`: 固定摄像头（`true`、`false`，仅 lite 模型支持）
+
+**图片输入格式**:
+- 在 `metadata.content` 数组中，图片项可通过 `role` 字段标记：
+  - `first_frame`: 首帧图片
+  - `last_frame`: 尾帧图片
+  - `reference_image`: 参考图（在提示词中使用 `[图N]` 引用）
+
+**注意事项**:
+- `doubao-seedance-1-0-lite-t2v-250428` 仅支持文生视频，不支持图片输入
+- `doubao-seedance-1-0-lite-i2v-250428` 的参考图模式不支持 `1080p` 分辨率
+- `doubao-seedance-1-0-lite-t2v-250428` 不支持 `adaptive` 宽高比
 
 
 
@@ -387,6 +747,29 @@ api: 'POST https://llm.ai-nebula.com/v1/video/generations'
       
       <Accordion title="如何上传自定义音频？">
         提供 `audio_url` 参数，指向可公开访问的音频文件URL。
+      </Accordion>
+    </AccordionGroup>
+  </Tab>
+  
+  <Tab title="豆包 Seedance">
+    <AccordionGroup>
+      <Accordion title="如何设置视频参数？">
+        豆包 Seedance 模型的参数通过文本提示词中的特殊标记控制，例如：
+        `--rs 720p --ratio 16:9 --dur 5 --fps 24 --seed 12345`
+      </Accordion>
+      
+      <Accordion title="支持哪些图生视频模式？">
+        - **首帧模式**：所有支持图生视频的模型都支持
+        - **首尾帧模式**：仅 `doubao-seedance-1-0-lite-i2v-250428` 和 `wan2-1-14b-flf2v-250417` 支持
+        - **参考图模式**：仅 `doubao-seedance-1-0-lite-i2v-250428` 支持，可在提示词中使用 `[图1]`、`[图2]` 等引用多张参考图
+      </Accordion>
+      
+      <Accordion title="如何配置回调通知？">
+        在 `metadata` 中设置 `callback_url` 字段，任务状态变更时会自动推送结果到该URL。
+      </Accordion>
+      
+      <Accordion title="支持哪些宽高比？">
+        大部分模型支持 `16:9`、`9:16`、`1:1`、`4:3`、`3:4`、`adaptive`（自适应）。注意 `doubao-seedance-1-0-lite-t2v-250428` 不支持 `adaptive`。
       </Accordion>
     </AccordionGroup>
   </Tab>
